design-system-fragment/kustomize/shared-configs/example-configs/example-5-app/overlays/plng-stg/resources/ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: app-ingress
spec:
  rules:
    - host: example-5-app-plng-stg-backend.mt1-test.enjoy-platform.local
      http:
        paths:
        - backend:
            serviceName: app-svc
            servicePort: 8080
---
#Ingress for content if this is needed
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  annotations:
    haproxy.router.openshift.io/disable_cookies: 'true'
  name: app-nginx-ingress
spec:
  rules:
    - host: example-5-app-content-stg.plaingaming.net
      http:
        paths:
        - backend:
            serviceName: nginx-content-svc
            servicePort: 8081
